# React-Rust

./: README.md
backend/: Cargo.toml
backend/src/: db.rs  loginSignup.rs  main.rs  pickupLines.rs  quote.rs  roasts.rs
login-signup/src/: App.js  index.css
login-signup/src/components/LoginSignup/: LoginSignup.jsx  ProtectedRoute.jsx  loginSignup.css
login-signup/src/components/mainPage/: Main.css  Main.jsx
login-signup/src/components/mainPage/Footer/: Footer.css  Footer.jsx
login-signup/src/components/navbar/: ElevenEleven.css  ElevenEleven.jsx  PickupLine.css  PickupLine.jsx  Roasts.css  Roasts.jsx  logout.jsx
