[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
cargo-watch = "8.5.2"
serde = {version="1.0.202", features = ["derive"]}
mysql = "20.0.2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
actix-web-httpauth = "0.6"
jsonwebtoken = "8.1"
chrono-tz = "0.6"
